Fixed section features on tablet

--- a/css/main.css
+++ b/css/main.css
@@ -523,7 +523,10 @@ img {
   .feature__list {
     list-style: none;
   }
-  .feature__name .feature__thumb {
+  .feature__name {
+    width: 450px;
+  }
+  .feature__thumb {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -561,12 +564,23 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .feature__title {
     text-align: left;
   }
+  .feature__name {
+    width: 354px;
+  }
   .feature__name .feature__thumb {
     width: 354px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .feature__name:not(:last-child) {
+    margin-right: 15px;
+    margin-bottom: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -574,14 +588,16 @@ img {
     padding-top: 94px;
     padding-bottom: 94px;
   }
+  .feature__name {
+    width: 270px;
+  }
   .feature__name .feature__thumb {
-    width: 354px;
+    width: 270px;
+  }
+  .feature__name:not(:last-child) {
+    margin-right: 30px;
   }
 }
-.feature__name:not(:last-child) {
-  margin-right: 30px;
-}
-
 @media screen and (max-width: 1199px) {
   .work {
     display: none;
